--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="header-div"></div>
     </header>
 
-    <section class="bg-success">
+    <section class="bootstrap bg-success">
         <div class="container d-flex flex-column align-items-center">
             <img class="avatar" src="/img/avatar.svg" alt="avatar">
             <h1>START BOOTSTRAP</h1>
@@ -24,13 +24,19 @@
         </div>
     </section>
 
-    <section class="bg-success">
+    <section class="portfolio">
         <div class="container d-flex flex-column align-items-center">
-            <img class="avatar" src="/img/avatar.svg" alt="avatar">
-            <h1>START BOOTSTRAP</h1>
+            <h2>PORTFOLIO</h2>
             <i class="bi bi-star-fill star"></i>
-            <h6>GRAPGIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h6>
+            <img class="img-fluid rounded" src="/img/cabin.png" alt="">
+            <img class="img-fluid rounded" src="/img/cake.png" alt="">
+            <img class="img-fluid rounded" src="/img/circus.png" alt="">
+            <img class="img-fluid rounded" src="/img/game.png" alt="">
+            <img class="img-fluid rounded" src="/img/safe.png" alt="">
+            <img class="img-fluid rounded" src="/img/submarine.png" alt="">
         </div>
     </section>
+
+    
 </body>
 </html>
