--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container d-flex flex-column align-items-center">
             <h2>PORTFOLIO</h2>
             <i class="bi bi-star-fill star"></i>
-            <div class="row row-cols-md-2">
+            <div class="row row-cols-md-2 row-cols-lg-3">
                 <img class="img-fluid rounded" src="/img/cabin.png" alt="">
                 <img class="img-fluid rounded" src="/img/cake.png" alt="">
                 <img class="img-fluid rounded" src="/img/circus.png" alt="">
