--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <div class="header-div"></div>
     </header>
 
-    <section class="bootstrap bg-success">
+    <section class="bootstrap bg-watergreen py-4">
         <div class="container d-flex flex-column align-items-center">
-            <img class="avatar" src="/img/avatar.svg" alt="avatar">
+            <img class="avatar" src="./img/avatar.svg" alt="avatar">
             <h1>START BOOTSTRAP</h1>
-            <i class="bi bi-star-fill star"></i>
-            <h6>GRAPGIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h6>
+            <i class="bi bi-star-fill"></i>
+            <h6>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h6>
         </div>
     </section>
 
-    <section class="portfolio">
+    <section class="portfolio py-4">
         <div class="container d-flex flex-column align-items-center">
             <h2>PORTFOLIO</h2>
             <i class="bi bi-star-fill star"></i>
@@ -43,7 +43,7 @@
         </div>
     </section>
 
-    <section class="about bg-success">
+    <section class="about bg-watergreen py-4">
         <div class="container d-flex flex-column align-items-center">
             <h2>ABOUT</h2>
             <i class="bi bi-star-fill star"></i>
@@ -57,22 +57,21 @@
                         doloremque?</p>
                 
             </div>
-            <button type="button" class="btn btn-light"><i class="bi bi-download"></i> Download</button>
+            <button type="button" class="btn btn-outline-secondary" disabled><i class="bi bi-download"></i> Download</button>
            
 
         </div>
     </section>
 
-    <section class="contact">
+    <section class="contact py-4">
         <div class="container d-flex flex-column align-items-center">
             <h2>CONTACT ME</h2>
             <i class="bi bi-star-fill star"></i>
         </div>
     </section>
 
-    <section class="location bg-dark">
+    <section class="location bg-light py-4">
         <div class="container d-flex flex-column align-items-center">
-
             <div class="row text-center">
                 <div class="col-12 col-md-4">
                     <h6>LOCATION</h6>
@@ -98,11 +97,13 @@
         </div>
     </section>
 
-    <footer class="bg-dark">
+    <footer class="bg-dark py-4">
         <div class="container d-flex flex-column align-items-center">
             <p>copyright your websites 2019</p>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
 
 </body>
