--- a/index.html
+++ b/index.html
@@ -13,9 +13,21 @@
 </head>
 
 <body>
-    <header class="bg-dark d-flex justify-content-between">
-        <div class="header-div"></div>
-        <div class="header-div"></div>
+    <header class="bg-dark">
+        <ul class="nav nav-tabs py-2 d-flex justify-content-between">
+
+            <div>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="#">START BOOTSTRAP</a>
+                  </li>
+            </div>
+            <div>
+                <li class="nav-item">
+                    <a class="nav-link"><i class="bi bi-list"></i></a>
+                </li>
+            </div>
+
+        </ul>
     </header>
 
     <section class="bootstrap bg-watergreen py-4">
@@ -103,8 +115,7 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 </body>
 
