form smartphone first done

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="container d-flex flex-column align-items-center">
             <img class="avatar" src="./img/avatar.svg" alt="avatar">
             <h1>START BOOTSTRAP</h1>
-            <i class="bi bi-star-fill"></i>
+            <i class="bi bi-star-fill star"></i>
             <h6>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h6>
         </div>
     </section>
@@ -59,8 +59,7 @@
         <div class="container d-flex flex-column align-items-center">
             <h2>ABOUT</h2>
             <i class="bi bi-star-fill star"></i>
-            <div class="row justify-content-center">
-
+            <div class="row justify-content-center px-5">
                 <P class="col-md">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet itaque placeat eligendi vero quas
                         doloribus maxime explicabo quis consectetur magni numquam, minima dolores deleniti similique voluptas
                         non, perferendis, neque soluta?</P>
@@ -79,6 +78,15 @@
         <div class="container d-flex flex-column align-items-center">
             <h2>CONTACT ME</h2>
             <i class="bi bi-star-fill star"></i>
+            <form>
+                <div class="row justify-content-center" >
+                    <input type="text" placeholder="Name" class="form-control" id="">
+                    <input type="email" placeholder="Email Address" class="form-control" id="">
+                    <input type="tel" placeholder="Phone Number" class="form-control" id="">
+                    <textarea name="message" placeholder="Message" class="form-control" id="" cols="10" rows="5"></textarea>
+                </div>
+                <button type="submit" class="btn btn-success mx-4 my-2">Send</button>
+              </form>
         </div>
     </section>
 
