font, nav, padding corrected

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <img class="avatar" src="./img/avatar.svg" alt="avatar">
             <h1>START BOOTSTRAP</h1>
             <i class="bi bi-star-fill star"></i>
-            <h6>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h6>
+            <div class="row">
+                <h6 class="col-12">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h6>
+            </div>
         </div>
     </section>
 
