--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="container d-flex flex-column align-items-center">
             <h2>CONTACT ME</h2>
             <i class="bi bi-star-fill star"></i>
-            <form>
+            <form action="URL" method="get">
                 <div class="row justify-content-center">
                     <input type="text" placeholder="Name" class="form-control" id="">
                     <input type="email" placeholder="Email Address" class="form-control" id="">
@@ -101,7 +101,7 @@
                     <textarea name="message" placeholder="Message" class="form-control" id="" cols="10"
                         rows="5"></textarea>
                 </div>
-                <button type="submit" class="btn btn-success mx-4 my-2">Send</button>
+                <button type="submit" class="btn btn-success">Send</button>
             </form>
         </div>
     </section>
